--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@plugin "@tailwindcss/typography";
+
 
 @custom-variant dark (&:is(.dark *));
 
@@ -120,3 +122,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+.tiptap p.is-editor-empty:first-child::before {
+  color: hsl(var(--color-muted-foreground));
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
+
